Fix: Align items and make them responsive, use the fixed_height of imgs

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,5 @@ h1, h3{
 }
 
 .card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
+  height: 200px;
 }
